# pithos

./: .codecov.yml  .gitignore  AGENTS.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  deny.toml
.github/workflows/: ci.yaml  codecov.yaml  push.yaml  tag_publish.yaml
crates/pithos/: Cargo.toml  README.md
crates/pithos/src/: main.rs
crates/pithos/src/io/: utils.rs
crates/pithos/src/utils/: conversion.rs
crates/pithos_lib/: Cargo.toml  README.md
crates/pithos_lib/src/: error.rs  lib.rs  readwrite.rs  streamreadwrite.rs
crates/pithos_lib/src/helpers/: archive_path.rs  chacha_poly1305.rs  crypt4gh.rs  deserialization.rs  directory.rs  file_entry_map.rs  footer_parser.rs  hash.rs  mod.rs  notifications.rs  ro_crate.rs  serialization.rs  structs.rs  x25519_keys.rs  zstd.rs
crates/pithos_lib/src/io/: extraction.rs  mod.rs  pithosreader.rs  pithoswriter.rs  util.rs
crates/pithos_lib/src/model/: deserialization.rs  mod.rs  serialization.rs  structs.rs
crates/pithos_lib/src/pithos/: structs.rs
crates/pithos_lib/src/transformers/: decrypt.rs  decrypt_resilient.rs  filter.rs  footer.rs  hashing_transformer.rs  hyper_sink.rs  mod.rs  pithos_comp_enc.rs
crates/pithos_lib/tests/: chacha_poly1305.rs  marshalling.rs  reader.rs  robustness.rs  writer.rs  x25519.rs
crates/pithos_lib/tests/common/: util.rs
crates/pithos_lib/tests/data/: SRR33138449.sample.fastq  recipient2_public.pem  sender_private.pem  t8.shakespeare.sample.txt
crates/pithos_lib/tests/data/dummy_dir/: conclusions.txt  dummy_results.txt  ro-crate-metadata.json
crates/pithos_lib/tests/data/dummy_dir/dataset/brain_gene_expression_data/: brain_data_assession_number.txt
crates/pithos_lib/tests/data/keys/: recipient1_private.pem  recipient1_public.pem  recipient2_private.pem  sender_public.pem
crates/pithos_pyo3/: Cargo.toml  README.md
crates/rocrate/: Cargo.toml
crates/rocrate/src/: builder.rs  entity.rs  error.rs  lib.rs  metadata.rs  reader.rs  types.rs  validation.rs  writer.rs
crates/rocrate/src/util/: marshall.rs  mod.rs  time.rs
spec/: PITHOS_1.0.0_draft.md  SPECIFICATION.md
