[workspace]
members = [
    "crates/*",
]
resolver = "2"

[workspace.package]
version = "0.6.0"
authors = ["Jannis Schlegel <das_Abroxas@proton.me>", "Sebastian Beyvers <sb@pus.de>"]
edition = "2024"
repository = "https://github.com/arunaengine/pithos"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }