[package]
name = "pithos"
description = "Client for the Pithos object storage file format"
version = "0.6.3"
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0.100"
async-channel = "2.5.0"
async-trait = "0.1.89"
base64 = "0.22.1"
borsh = { version = "1.5.7", features = ["std", "derive"] }
bytes = "1.10.1"
chacha20poly1305 = "0.10.1"
clap = { version = "4.5.50", features = ["derive"] }
crypto_kx = { version = "0.2.1", features = ["serde"] }
dotenvy = "0.15.7"
futures = "0.3.31"
futures-util = "0.3.31"
openssl = "0.10.74"
pithos_lib = { path = "../pithos_lib", version = "0.6.3" }
rand = "0.9.2"
serde_json = "1.0.140"
tokio = { version = "1.45.0", features = ["full"] }
tokio-stream = "0.1.17"
tokio-util = "0.7.15"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "time"] }
x25519-dalek = "2.0.1"
indicatif = "0.17.11"
