[package]
name = "pithos"
description = "CLI for the Pithos container file format"
version = "0.7.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
pithos_lib = { path = "../pithos_lib" }
thiserror = { workspace = true }
tracing.workspace = true
tracing-subscriber.workspace = true
x25519-dalek.workspace = true
#indicatif = "0.17.9"