[package]
name = "pithos_lib"
description = "Library and components for encrypting / compressing pithos (.pith) files, including specification"
version = "0.7.1"
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake3 = "1.8.2"
byteorder = "1.5.0"
chacha20poly1305 = "0.11.0"
crc32fast = "1.5.0"
digest = "0.11.3"
fastcdc = "4.0.1"
indexmap = "2.11.0"
integer-encoding = "4.0.2"
pkcs8 = { version = "0.11.0", features = ["pem", "alloc"] }
reqwest = {  version = "0.13.4", features = ["blocking"] }
rocrate = { version = "0.1.0", path = "../rocrate" }
shake = "0.1.0"
thiserror = { workspace = true }
tracing = { workspace = true }
walkdir = "2.5.0"
x25519-dalek = { workspace = true }
zstd = "0.13.3"

[dev-dependencies]
tempfile = "3.21"
zip = "5.0.0"
