[package]
name = "rocrate"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
regex = "1.11.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.12"
url = "2.4"
zip = "4.3.0"
lazy_static = "1.5.0"
chrono = "0.4.41"

[dev-dependencies]
tempfile = "3.20"
pretty_assertions = "1.4"

[features]
default = []
# Add feature flags for optional functionality later