[package]
name = "rocrate"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
regex = "1.11.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = { workspace = true }
url = "2.5"
zip = "5.0.0"
lazy_static = "1.5.0"
chrono = "0.4.41"

[dev-dependencies]
tempfile = "3.21"
pretty_assertions = "1.4"

[features]
default = []
# Add feature flags for optional functionality later